src/css/styles.css
/* ... */
.frame-list {
  max-width: 90%;
  overflow: hidden;
  align-content: center;
  display: flex;
  overflow-x: scroll;
  gap: 2.5rem;
  padding: 10px;
  scroll-behavior: smooth;
  align-items: center;
  margin: 0 auto;
}

#frame-carousel-wrapper {
  display: flex;
  align-items: center;
  flex-direction: row;
  justify-content: center;
  gap: 2.5em; /* Space between items */
  margin: 0 auto; /* Center wrapper horizontally */
  transition: transform 0.4s ease-in-out; /* Smooth scrolling effect */
}
.frame-list::-webkit-scrollbar {
  display: none;
}

.navigator {
  margin: 10px;
}

.page-navigator-left button,
.page-navigator-right button {
  background-color: white;
  color: #5068a8;
  border: none;
  padding: 10px 15px;
  cursor: pointer;
  border-radius: 50%;
  font-size: 16px;
  width: 50px;
  height: 50px;
}

.page-navigator-left g:hover,
.page-navigator-right g:hover {
  fill: #222f54;
  cursor: pointer;
}

.page-navigator-left path:hover,
.page-navigator-right path:hover {
  /* fill: #fff; */
  cursor: pointer;
}

.page-navigator-left:hover path,
.page-navigator-right:hover path {
  fill: #fff;
}

/* Mobile frame */
.mobile-frame {
  flex-shrink: 0;
  width: 50vw;
  height: 90vh;
  max-width: 320px;
  max-height: 680px;
  background-color: #fdfdfd;
  border-radius: 20px;
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
  position: relative;
  border: #373737 solid 5px;
  min-height: 400px;
  scrollbar-width: thin;
  scrollbar-color: transparent transparent;
  opacity: 1;
  /* transform: scale(1);
  transition: opacity 0.4s ease, transform 0.4s ease; */
}

.mobile-frame.removing {
  opacity: 0;
  transform: scale(0.9);
}

.mobile-frame.adding {
  opacity: 0;
  transform: scale(1.1);
}

.active-editor {
  border: 5px solid #5068a8;
  box-shadow: 0 0 10px rgba(0, 123, 255, 0.5);
}

.header {
  flex-shrink: 0;
  display: flex;
  justify-content: space-between;
  padding: 10px;
  font-size: 12px;
  font-weight: bold;
}

.icons {
  display: flex;
  gap: 10px;
}

/* App bar */
.app-bar {
  display: flex;
  align-items: center;
  gap: 8px;
  padding: 12px 16px;
  /* background-color: white; */
  /* border-bottom: 1px solid #e5e7eb; */
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Arial,
    sans-serif;
}

.back-button {
  background: none;
  border: 1px solid #262626;
  padding: 8px;
  cursor: pointer;
  border-radius: 50%;
  display: flex;
  align-items: center;
  justify-content: center;
}

#content-back-button {
  height: 40px;
  width: 40px;
  cursor: pointer;
}

.back-button:hover {
  background-color: #f3f4f6;
}

.back-arrow {
  width: 18px;
  height: 18px;
  fill: #4b5563;
}

.app-bar .title {
  font-size: 18px;
  font-weight: 500;
  color: #1f2937;
  margin: 0;
}

/* Input field */
.tb-form-control {
  padding: 8px;
  border-radius: 7px;
  width: 100%;
  border: 1px solid #b4b9bd;
  /* box-shadow: 0px 3px 6px #00000029; */
}

.custom-selection {
  height: 35px;
  min-width: 200px;
  margin-right: 10px;
}

input:focus {
  border-color: #222f54; /* Changes border color when focused */
}

.theme-selection {
  min-width: 200px;
  margin-right: 10px;
}
.theme-selection .tb-form-control {
  padding: 10px;
  height: 35px;
}

.tb-custom-theme-selection {
  position: relative;
  width: 180px;
  margin-right: 10px;
}

.theme-select-button {
  padding: 6px 16px;
  background: white;
  border: 1px solid #e2e2e2;
  border-radius: 6px;
  cursor: pointer;
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 14px;
  color: #333;
  width: 100%;
}

.theme-select-button:hover {
  border-color: #ccc;
}

.theme-select-button:focus {
  outline: none;
  border-color: #999;
}

.theme-select-button::after {
  content: "";
  width: 6px;
  height: 6px;
  border-right: 1.5px solid #666;
  border-bottom: 1.5px solid #666;
  transform: rotate(45deg);
  transition: transform 0.2s;
}

.theme-select-button.open::after {
  transform: rotate(-135deg);
}

.theme-options-list {
  position: absolute;
  top: 100%;
  left: 0;
  right: 0;
  background: white;
  border-radius: 6px;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
  margin-top: 4px;
  display: none;
  max-height: 200px;
  overflow-y: auto;
  border: 1px solid #e2e2e2;
}

.theme-options-list.show {
  display: block;
}

.theme-option {
  padding: 8px 16px;
  cursor: pointer;
  font-size: 14px;
  color: #333;
}

.theme-option:hover {
  background: #222f54;
  color: #fff;
}

.theme-option.selected {
  background: #222f54;
  color: #fff;
}

/* xx */
.tb-custom-category-selection {
  position: relative;
  width: 100%;
  margin-right: 10px;
}

.category-select-button {
  padding: 6px 16px;
  background: white;
  border: 1px solid #e2e2e2;
  border-radius: 6px;
  cursor: pointer;
  display: flex;
  justify-content: space-between;
  align-items: center;
  font-size: 14px;
  color: #333;
  width: 100%;
}

.category-select-button:hover {
  border-color: #ccc;
}

.category-select-button:focus {
  outline: none;
  border-color: #999;
}

.category-select-button::after {
  content: "";
  width: 6px;
  height: 6px;
  border-right: 1.5px solid #666;
  border-bottom: 1.5px solid #666;
  transform: rotate(45deg);
  transition: transform 0.2s;
}

.category-select-button.open::after {
  transform: rotate(-135deg);
}

.category-options-list {
  position: absolute;
  top: 100%;
  left: 0;
  right: 0;
  background: white;
  border-radius: 6px;
  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
  margin-top: 4px;
  display: none;
  max-height: 200px;
  overflow-y: auto;
  border: 1px solid #e2e2e2;
}

.category-options-list.show {
  display: block;
}

.category-option {
  padding: 8px 16px;
  cursor: pointer;
  font-size: 14px;
  color: #333;
}

.category-option:hover {
  background: #222f54;
  color: #fff;
}

.category-option.selected {
  background: #222f54;
  color: #fff;
}
/* Sidebar */
/* #mapping-section {
  display: block;
} */
/* ... */

